test(parking-lot): 기존 테스트 코드 수정 #59